# ROBOTIS-THORMANG-MPC

./: .gitignore  README.md
motion_module_biped/: CMakeLists.txt  package.xml
motion_module_biped/include/motion_module_biped/: motion_module_biped.h
motion_module_biped/src/: motion_module_biped.cpp
motion_module_lleg/: CMakeLists.txt  package.xml
motion_module_lleg/include/motion_module_lleg/: motion_module_lleg.h
motion_module_lleg/src/: motion_module_lleg.cpp
motion_module_rleg/: CMakeLists.txt  package.xml
motion_module_rleg/include/motion_module_rleg/: motion_module_rleg.h
motion_module_rleg/src/: motion_module_rleg.cpp
sample_manager/: CMakeLists.txt  package.xml
sample_manager/config/: biped.robot  dxl_biped.yaml  dxl_init.yaml  dxl_lleg.yaml  dxl_rleg.yaml  lleg.robot  offset.yaml  rleg.robot  sample.robot
sample_manager/launch/: biped.launch  lleg.launch  rleg.launch  sample_manager.launch  thormang3_manager_gazebo.launch
sample_manager/src/: sample_manager.cpp
sample_motion_module/: CMakeLists.txt  package.xml
sample_motion_module/include/sample_motion_module/: sample_motion_module.h
sample_motion_module/src/: sample_motion_module.cpp
sample_sensor_module/: CMakeLists.txt  package.xml
sample_sensor_module/include/sample_sensor_module/: sample_sensor_module.h
sample_sensor_module/src/: sample_sensor_module.cpp
sensor_module_biped/: CMakeLists.txt  package.xml
sensor_module_biped/include/sensor_module_biped/: sensor_module_biped.h
sensor_module_biped/src/: sensor_module_biped.cpp
thormang3_action_module/: CMakeLists.txt
thormang3_base_module/: CMakeLists.txt  package.xml
thormang3_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
thormang3_manager/launch/: thormang3_manager.launch
thormang3_manager/src/: thormang3_manager.cpp
thormang3_mpc/: package.xml
