<?xml version="1.0"?>
<package format="2">
  <name>sample_sensor_module</name>
  <version>0.2.0</version>
  <description>
    This package is a sample sensor module
  </description>

  <maintainer email="shuuji.kajita@gmail.com">Shuuji Kajita</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_math</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
